<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- ***** Strings ***** -->

    <string name="app_name">Kodemma Slider</string>

    <!-- *** BoardActivity *** -->
    <string name="board_button_start">start</string>
    <string name="board_button_restart">restart</string>
    <string name="board_button_pause">pause</string>
    <string name="board_button_resume">resume</string>
    <string name="board_button_setting">setting</string>
    <string name="board_button_title">title</string>
    <string name="congratulation">Congratulation!</string>
    
    <!-- *** config resource *** -->
    <string name="menu_exit">exit</string>
    <string name="config_title">Game Setting</string>
    <string name="conf_level">Level Setting </string>
    <string name="conf_hint">HINT On/Off</string>
    <string name="conf_tile">TILE On/Off</string>
    <string name="conf_pict">Select BackGround Picture</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_ok">Ok</string>
    <string name="str_cancel">Cancel</string>
    <string name="txt_label_level">Level Setting</string>
    <string name="txt_label_hint">HINT</string>
    <string name="txt_label_tile">TILE</string>
    <string name="txt_label_choose">Choose</string>
    <string name="txt_label_sound">SOUND</string>
    <string name="txt_btn_play">play</string>
    <string name="txt_btn_ranking">ranking</string>
    <string name="txt_btn_exit">exit</string>

    <!-- *** dialog message *** -->
    <string name="alart_title_failureInLoadingBitmap">Failure in Loading Bitmap</string>
    <string name="alart_message_outOfMEmory">There is not enough memory. Please choose a small image.</string>
    <string name="alart_message_fileNotFound">Image file can not be found. Please select a different image.</string>
    <string name="alart_message_unknownException">Unexpected exception has occurred. Please select a different image.</string>

    <!-- *** RankingActivity *** -->
    <string name="rankID">Rank</string>
    <string name="scoreID">Score</string>
    <string name="countID">Count</string>
    <string name="timeID">Time</string>
    <string name="ranking_place">st</string>
</resources>