<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/txt_label_level"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/id_conf_level_spn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/conf_level" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/id_conf_cbhint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_hint" />

        <CheckBox
            android:id="@+id/id_conf_cbtile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_tile" />
        
        <CheckBox
            android:id="@+id/id_conf_cbsound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_sound" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="1dip"
            android:text="@string/conf_pict"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/id_btnChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_label_choose" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="5"
        android:padding="1dip"
        android:background="#FFF"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageview1"
            android:background="#000"
            android:layout_gravity="fill_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="1dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/id_btnPlayActCall"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_btn_play" />

        <Button
            android:id="@+id/id_btnRankingActCall"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_btn_ranking" />

        <Button
            android:id="@+id/id_btnTitleActCall"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_btn_exit" />
    </LinearLayout>
</LinearLayout>