<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="#ffffffff"
        android:orientation="horizontal"
        android:padding="1dip" >

        <TextView
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff000000"
            android:text="00:00:00"
            android:textColor="#ffffffff"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/slideCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="#ffffffff"
            android:text="000"
            android:textColor="#ff000000"
            android:textSize="20dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="9"
        android:background="#ff000000" >

        <kodemma.android.sliderpuzzle.BackgroundView
            android:id="@+id/backgroundView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
        <kodemma.android.sliderpuzzle.BoardView
            android:id="@+id/boardView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@id/board_button_start"
            style="@style/normalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/board_button_start" />

        <Button
            android:id="@id/board_button_pause"
            style="@style/normalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/board_button_pause" />

        <Button
            android:id="@id/board_button_setting"
            style="@style/normalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/board_button_setting" />
        
        <Button
            android:id="@id/board_button_title"
            style="@style/normalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/board_button_title" />
    </LinearLayout>

</LinearLayout>